--- a/argos/traefik-deploy.yaml
+++ b/argos/traefik-deploy.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: traefiktest-pod
-          image: vsimone67/traefiktest:latest
+          image: vsimone67/traefiktest:latest1
           imagePullPolicy: "Always"
           ports:
             - name: web
