--- a/argos/traefik-deploy.yaml
+++ b/argos/traefik-deploy.yaml
@@ -50,3 +50,8 @@ spec:
       services:
         - name: traefiktest-svc
           port: 80
+    - match: Host(`traefiktest.titan`)
+      kind: Rule
+      services:
+        - name: traefiktest-svc
+          port: 80
